# ClimAID

./: .gitignore  404.html  LICENSE  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: publish.yml
api/climate/: index.html
api/datasets/: index.html
api/llmclient/: index.html
api/model/: index.html
api/plots/: index.html
api/projections/: index.html
api/reporting/: index.html
api/resources/: index.html
api/utils/: index.html
climaid/: cli.py  climaid_model.py  climaid_projections.py  climate_data.py  districts.py  llm_client.py  model_parameters.py  model_registry.py  projection_plots.py  reporting.py  utils.py  wizard.py
climaid/browser_ui/: api.py  launcher.py  server.py  state.py
climaid/browser_ui/static/: browser.js  index.html  style.css
climaid/datasets/: manager.py  registry.py
climaid/docs/dataset_samples/: sample_climate_data.csv  sample_climateprojection_data.csv  sample_disease_data.csv
climaid/projections/: loader.py
datasets/: sample_climate.csv  sample_disease.csv  sample_projection.csv
search/: search_index.json
stylesheets/: extra.css
