[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "climaid"
version = "0.1.2"  
description = "Climate Change impact using AI on Diseases (ClimAID) Toolkit for Climate-Driven Disease Modelling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }  

authors = [
    { name = "Avik Kumar Sam", email = "avik.sam@iitb.ac.in" },
]

keywords = [
    "climate",
    "epidemiology",
    "disease modelling",
    "dengue",
    "malaria",
    "water-borne diseases",
    "cmip6",
    "projections",
    "south asia",
    "global",
    "climate-health"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "pandas>=2.3",
    "numpy>=1.26",
    "geopandas>=0.14",
    "matplotlib>=3.7",
    "scikit-learn>=1.6",
    "xarray>=2023.11",
    "regionmask>=0.13",
    "requests>=2.32",
    "joblib>=1.3",
    "optuna>=4.0.0",
    "xgboost>=2.0.0",
    "plotly>=6.3.0",
    "Markdown>=3.4.1",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
    "fastapi>=0.135.1",
    "fastparquet>=2024.5.0",  
    "python-multipart>=0.0.22",
    "seaborn>=0.12.2",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
full = [
    "ollama>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sam-as/ClimAID"
Repository = "https://github.com/sam-as/ClimAID"
Documentation = "https://sam-as.github.io/ClimAID/"  


[project.scripts]
climaid = "climaid.cli:app"


# 🔧 SETUPTOOLS CONFIG

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["climaid*"]


[tool.setuptools.package-data]
climaid = [
    # STATIC FILES (CRITICAL FIX)
    "browser_ui/static/*",
    "browser_ui/static/**/*",

    # assets
    "assets/*.png",

    # data 
    "data/*.csv",
    "data/*.parquet",
    "data/*.xlsx",
    "data/*.xls",

    # optional samples
    "dataset_samples/*.csv",
]